--- a/index.html
+++ b/index.html
@@ -77,21 +77,21 @@
         <div class="services-box">
           <i class='bx bx-code-alt' ></i>
           <h3>Web Develop</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, facilis.</p>
+          <p>Web Developer merancang sebuah website dari awal sekali, menciptakan coding dsb, atau bisa juga seorang Web Developer mengembangkan sebuah website yang sudha ada. Web Developer bisa bekerja secara terikat dengan perusahaan, atau menjadi pekerja lepas freelancer</p>
           <a href="" class="btn">Read More</a>
         </div>
 
         <div class="services-box">
             <i class='bx bxs-paint' ></i>
             <h3>Grapik</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, facilis.</p>
+          <p>Grafik ialah sebagai suatu kombinasi antara angka, huruf, simbol, gambar, lambang, perkataan, lukisan, yang disajikan satu media untuk memberi konsep maupun ide dari pengirim kepada sasarannya dalam proses menyampaikan maklumat</p>
           <a href="" class="btn">Read More</a>
         </div>
 
         <div class="services-box">
           <i class='bx bxs-store' ></i>
           <h3>Digital Market</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, facilis.</p>
+          <p> digital marketing adalah kegiatan pemasaran produk berupa barang atau jasa menggunakan media atau teknologi berbasis digital</p>
           <a href="" class="btn">Read More</a>
         </div>
 
