--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="home-content">
         <h3>HALLO, SEMUANYA</h3>
         <h1>INI WEB KU</h1>
-        <h3>Profesi <span class="multiple-text">XII</span></h3>
+        <h3>Profesi <span class="multiple-text">Pelajar</span></h3>
         <P>Saya Dimas, ini semua adalah data diriku</P>
         <div class="social-media">
           <a href="https://wa.me/qr/FRL3WNCJMD3NKI"><i class='bx bxl-whatsapp'></i></a>
