--- a/Login1/index.html
+++ b/Login1/index.html
@@ -28,7 +28,7 @@
                         <div class="forget">
                             <label for=""><input type="checkbox">Remember Me <a href="">Forget Password</a></label>
                         </div>
-                        <button><a href="index.html">Login</a></button>
+                        <button><a href="https://dimasmartadinata.github.io/">Login</a></button>
                         <div class="register">
                             <p>Don't have account <a href="#">Register</a></p>
                         </div>
