--- a/Login1/index.html
+++ b/Login1/index.html
@@ -13,7 +13,7 @@
         <section>
             <div class="form-box">
                 <div class="form-value">
-                    <form action="index.html">
+                    <form action="https://dimasmartadinata.github.io/">
                         <h2>Login</h2>
                         <div class="inputbox">
                             <ion-icon name="mail-outline"></ion-icon>
