--- a/Login1/index.html
+++ b/Login1/index.html
@@ -13,7 +13,7 @@
         <section>
             <div class="form-box">
                 <div class="form-value">
-                    <form action="https://dimasmartadinata.github.io/">
+                    <form action="dimasmartadinata.github.io">
                         <h2>Login</h2>
                         <div class="inputbox">
                             <ion-icon name="mail-outline"></ion-icon>
@@ -28,7 +28,7 @@
                         <div class="forget">
                             <label for=""><input type="checkbox">Remember Me <a href="">Forget Password</a></label>
                         </div>
-                        <button><a href="https://dimasmartadinata.github.io/">Login</a></button>
+                        <button><a href="">Login</a></button>
                         <div class="register">
                             <p>Don't have account <a href="#">Register</a></p>
                         </div>
