--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h3>Profesi <span class="multiple-text">Pelajar</span></h3>
         <P>Saya Dimas, ini semua adalah data diriku</P>
         <div class="social-media">
-          <a href="https://wa.me/qr/FRL3WNCJMD3NKI"><i class='bx bxl-whatsapp'></i></a>
+          <a href="https:"https://wa.me/FRL3WNCJMD3NKI"><i class='bx bxl-whatsapp'></i></a>
           <a href="https://instagram.com/yoodimss?igshid=0GQ5ZDc20Dk2ZA=="><i class='bx bxl-instagram' ></i></a>
           <a href="https://www.youtube.com/watch?v=yk5UAdInbeM"><i class='bx bxl-youtube' ></i></a>
           <a href=""><i class='bx bxl-facebook' ></i></a>
