--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <i class='bx bx-menu' id="menu-icon"></i>
 
       <nav class="navbar">
-        <a href="#home" class="active">Home</a>
+        <a href="#home" class="active">Beranda</a>
         <a href="#about">About</a>
         <a href="#services">Services</a>
         <a href="#portfolio">Portfolio</a>
