--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
       <nav class="navbar">
         <a href="#home" class="active">Beranda</a>
-        <a href="#about">About</a>
-        <a href="#services">Services</a>
+        <a href="#about">Tentang</a>
+        <a href="#services">Melayani</a>
         <a href="#portfolio">Portfolio</a>
-        <a href="#contact">contact</a>
+        <a href="#contact">Kontakt</a>
       </nav>
     </header>
 
