--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="#about">Tentang</a>
         <a href="#services">Melayani</a>
         <a href="#portfolio">Portfolio</a>
-        <a href="#contact">Kontakt</a>
+        <a href="#contact">Kontat</a>
       </nav>
     </header>
 
