--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <div class="portfolio-layer">
                   <h4>Tugas WEB</h4>
                   <p>Ini tugas web pembuatan LOGIN</p>
-                  <a href="#"><i class='bx bx-link-external' ></i></a>
+                  <a href="https://dimasmartadinata.github.io/Login1/"><i class='bx bx-link-external' ></i></a>
               </div>
           </div>
 
