--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               <div class="portfolio-layer">
                   <h4>Tugas WEB</h4>
                   <p>Ini adalah tugas web pembuatan WEB DATA DIRI</p>
-                  <a href="#"><i class='bx bx-link-external' ></i></a>
+                  <a href="https://dimasmartadinata.github.io/Login2/"><i class='bx bx-link-external' ></i></a>
               </div>
           </div>
 
