--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!-- services section design -->
 
     <section class="services" id="services">
-      <h2 class="heading">our <span>services</span></h2>
+      <h2 class="heading">Sedikit <span>Penjelasan</span></h2>
 
       <div class="services-container">
         <div class="services-box">
@@ -97,7 +97,7 @@
 
     <!-- Portfolio section design -->
     <section class="portfolio" id="portfolio">
-      <h2 class="heading">Latest <span>Project</span></h2>
+      <h2 class="heading">Projek <span>Saya</span></h2>
 
       <div class="portfolio-container">
           <div class="portfolio-box">
@@ -157,7 +157,7 @@
 
   <!-- contact section design -->
   <section class="contact" id="contact">
-      <h2 class="heading">Contact <span>Me!</span></h2>
+      <h2 class="heading">Hubungi <span>Saya</span></h2>
 
       <form action="#">
           <div class="input-box">
