--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               <div class="portfolio-layer">
                   <h4>Tugas WEB</h4>
                   <p>Ini adalah tugas web pembuatan WEB DATA DIRI</p>
-                  <a href="https://dimasmartadinata.github.io/Login2/"><i class='bx bx-link-external' ></i></a>
+                  <a href="https://dimasmartadinata.github.io/Login3/index.html"><i class='bx bx-link-external' ></i></a>
               </div>
           </div>
 
@@ -123,7 +123,7 @@
               <div class="portfolio-layer">
                   <h4>Tugas WEB</h4>
                   <p>Ini adalah tugas web pembuatan tampilan selesai LOGIN</p>
-                  <a href="#"><i class='bx bx-link-external' ></i></a>
+                  <a href="https://dimasmartadinata.github.io/Login2/"><i class='bx bx-link-external' ></i></a>
               </div>
           </div>
 
@@ -132,7 +132,7 @@
               <div class="portfolio-layer">
                   <h4>Tugas PBO</h4>
                   <p>Ini tugas PBO tkinter</p>
-                  <a href="#"><i class='bx bx-link-external' ></i></a>
+                  <a href="https://dimasmartadinata.github.io/Login3/contact.html"><i class='bx bx-link-external' ></i></a>
               </div>
           </div>
           <div class="portfolio-box">
@@ -140,7 +140,7 @@
               <div class="portfolio-layer">
                   <h4>Tugas WEB</h4>
                   <p>Ini adalah tugas web pembuatan PORTOFOLIO</p>
-                  <a href="#"><i class='bx bx-link-external' ></i></a>
+                  <a href="https://dimasmartadinata.github.io/"><i class='bx bx-link-external' ></i></a>
               </div>
           </div>
 
@@ -149,7 +149,7 @@
               <div class="portfolio-layer">
                   <h4>Tugas Basis DATA</h4>
                   <p>ini adalah tugas pembuatan vid Blajar MYSQL</p>
-                  <a href="#"><i class='bx bx-link-external' ></i></a>
+                  <a href="https://dimasmartadinata.github.io/Login3/about.html"><i class='bx bx-link-external' ></i></a>
               </div>
           </div>
       </div>
