--- a/index.html
+++ b/index.html
@@ -161,15 +161,15 @@
 
       <form action="#">
           <div class="input-box">
-              <input type="text" placeholder="Full Name">
-              <input type="email" placeholder="Email Address">
+              <input type="text" placeholder="Nama">
+              <input type="email" placeholder="Alamat Email">
           </div>
           <div class="input-box">
-              <input type="number" placeholder="Mobile Number">
-              <input type="text" placeholder="Email Subject">
+              <input type="number" placeholder="Nomor">
+              <input type="text" placeholder="Teks">
           </div>
-          <textarea name="" id="" cols="30" rows="10" placeholder="Your Massage"></textarea>
-          <input type="submit" value="send massage" class="btn">
+          <textarea name="" id="" cols="30" rows="10" placeholder="Pesan Anda"></textarea>
+          <input type="submit" value="Kirim Pesan" class="btn">
       </form>
   </section>
 
