--- a/Login3/about.html
+++ b/Login3/about.html
@@ -26,6 +26,10 @@
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">PBO</a>
               </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://dimasmartadinata.github.io/">PBO</a>
+            </li>
+                
             </ul>
           </div>
         </div>
