--- a/Login3/contact.html
+++ b/Login3/contact.html
@@ -27,6 +27,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">PBO</a>
               </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://dimasmartadinata.github.io/">PBO</a>
+            </li>
             </ul>
           </div>
         </div>
