--- a/Login3/contact.html
+++ b/Login3/contact.html
@@ -28,7 +28,7 @@
                 <a class="nav-link" href="contact.html">PBO</a>
               </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://dimasmartadinata.github.io/">PBO</a>
+                <a class="nav-link" href="https://dimasmartadinata.github.io/">Kembali</a>
             </li>
             </ul>
           </div>
