--- a/Login2/index.html
+++ b/Login2/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <div class="wrapper">
-            <div class="logo"><a href="">Kamar Mayat</a></div></div>
+            <div class="logo"><a href="">DimasMarta</a></div></div>
             <div class="menu">
                 <ul>
                     <li><a href="#home">Home</a></li>
@@ -17,7 +17,7 @@
                     <li><a href="#tutors">Tutors</a></li>
                     <li><a href="#partners">Partners</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="" class="tbl-biru">Sign Up</a></li>
+                    <li><a href="" class="tbl-green">Sign Up</a></li>
                 </ul>
             </div>
         </div>
