--- a/Login2/index.html
+++ b/Login2/index.html
@@ -17,7 +17,7 @@
                     <li><a href="#tutors">Tutors</a></li>
                     <li><a href="#partners">Partners</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="" class="tbl-green">Sign Up</a></li>
+                    <li><a href="https://dimasmartadinata.github.io/" class="tbl-green">Sign Up</a></li>
                 </ul>
             </div>
         </div>
