--- a/Login3/index.html
+++ b/Login3/index.html
@@ -23,10 +23,10 @@
                 <a class="nav-link active" aria-current="page" href="index.html">Beranda</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">BD</a>
+                <a class="nav-link" href="about.html">tentang</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">PBO</a>
+                <a class="nav-link" href="contact.html">kontak</a>
               </li>
              <li class="nav-item">
                 <a class="nav-link" href="https://dimasmartadinata.github.io/">Kembali</a>
