--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
               <div class="portfolio-layer">
                   <h4>Tugas WEB</h4>
                   <p>Ini adalah tugas web pembuatan PORTOFOLIO</p>
-                  <a href="https://dimasmartadinata.github.io/"><i class='bx bx-link-external' ></i></a>
+                  <a href="https://www.youtube.com/watch?v=3bJ-jALxJfg"><i class='bx bx-link-external' ></i></a>
               </div>
           </div>
 
