--- a/index.html
+++ b/index.html
@@ -140,16 +140,16 @@
               <div class="portfolio-layer">
                   <h4>Tugas WEB</h4>
                   <p>Ini adalah tugas web pembuatan PORTOFOLIO</p>
-                  <a href="https://www.youtube.com/watch?v=3bJ-jALxJfg"><i class='bx bx-link-external' ></i></a>
+                  <a href="https://dimasmartadinata.github.io/"><i class='bx bx-link-external' ></i></a>
               </div>
           </div>
-
+        
           <div class="portfolio-box">
               <img src="images/portfolio6.png" alt="">
               <div class="portfolio-layer">
                   <h4>Tugas Basis DATA</h4>
                   <p>ini adalah tugas pembuatan vid Blajar MYSQL</p>
-                  <a href="https://dimasmartadinata.github.io/Login3/about.html"><i class='bx bx-link-external' ></i></a>
+                  <a href="https://www.youtube.com/watch?v=3bJ-jALxJfg"><i class='bx bx-link-external' ></i></a>
               </div>
           </div>
       </div>
