--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="social-media">
           <a href="https:"https://wa.me/FRL3WNCJMD3NKI"><i class='bx bxl-whatsapp'></i></a>
           <a href="https://instagram.com/yoodimss?igshid=0GQ5ZDc20Dk2ZA=="><i class='bx bxl-instagram' ></i></a>
-          <a href="https://www.youtube.com/watch?v=yk5UAdInbeM"><i class='bx bxl-youtube' ></i></a>
+          <a href="https://www.youtube.com/watch?v=3bJ-jALxJfg"><i class='bx bxl-youtube' ></i></a>
           <a href=""><i class='bx bxl-facebook' ></i></a>
         </div>
         <a href="cv samed.pdf" class="btn">Download CV</a>
